    less than or equal to "estimated remaining laps" reading.
    If countdown drops below 1.0 (laps), it indicates the final lap of current stint,
    and driver should pit in before the end of current lap to refuel.
    If countdown reaches zero or negative, there may still be some fuel or energy left in tank,
    however it will not be enough to complete another full lap.

* Timing Widget
  - Add "show_average_pace" option, which shows personal current average laptime pace,
    this reading is also used in real-time fuel calculation.
    Note, additional "average laptime pace" calculation setting can be found in "Delta Module" config.
    After ESC or session ended, laptime pace reading will be reset,
    and aligned to "all time personal best laptime" if available.

* Weather forecast Widget
  - Add "number_of_forecasts" option, which sets number of forecasts to display.
    Value range in "1" to "4". Default is "4" forecasts.
  - Add "column_index_*" options for customizing data display order of each forecast.

2.15.1 (2024-07-13)
-----------------------------
* General
  - Reworked preset saving system to prevent preset file corruption in rare case.
    Saving system now creates temporary backup for old preset file before saving.
    If all saving attempts failed, saving will be aborted,
    and old preset file will be restored to avoid preset file corruption.
  - Add "maximum_saving_attempts" option in Compatibility dialog,
    which sets maximum retry attempts for preset saving.
    Default value is "10". Minimum value is limited to "3" maximum attempts.
    Note, each attempt has a roughly 50ms delay.

* Radar Widget
  - Fixed an issue where radar would not auto hide under certain condition.

* Sectors Widget
  - Fixed incorrect PB sector time display if "target time" is set on "Personal".

* Weather forecast Widget
  - Add "layout" option, which sets columns display order.
    "0" = show columns from left to right.